screen size updated

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             margin-top: 3.5%;
         }
       } 
-      /* 设置了浏览器宽度不大于960px时 iPad Pro & Laptop 1024*/  
+      /* 设置了浏览器宽度不大于1024px时 iPad Pro & Laptop 1024*/  
       @media screen and (max-width: 1024px) { 
         #logo { 
           background: url('/image/logo/first.png') no-repeat; 
@@ -134,7 +134,7 @@
           height: 200px;
         }
       } 
-      /* 设置了浏览器宽度不大于480时*/ 
+      /* 设置了浏览器宽度不大于480px时*/ 
       @media screen and (max-width: 480px) { 
         #logo { 
           background: url('/image/logo/first1.png') no-repeat; 
@@ -161,6 +161,7 @@
           height: 130px;
         }
         } 
+        /* 设置了浏览器宽度不大于320px时*/ 
         @media screen and (max-width: 320px) { 
           #logo { 
             background: url('/image/logo/first1.png') no-repeat; 
