--- a/en/team.html
+++ b/en/team.html
@@ -41,8 +41,8 @@
         }
         .team-mem-nav {
           width: 620px;
-          margin-left: 25%;
-          margin-right: 25%;
+          margin-left: 33%;
+          margin-right: 33%;
         }
       } 
       /* 设置了浏览器宽度不大于1366px时*/ 
@@ -98,9 +98,9 @@
           height: 400px;
         }
         .team-mem-nav {
-          width: 620px;
-          margin-left: 6%;
-          margin-right: 6%;
+          width: 610px;
+          margin-left: 18%;
+          margin-right: 18%;
         }
       } 
       /* 设置了浏览器宽度不大于768px时 iPad 768*/ 
@@ -127,9 +127,9 @@
           height: 230px;
         }
         .team-mem-nav {
-          width: 620px;
-          margin-left: 1%;
-          margin-right: 1%;
+          width: 610px;
+          margin-left: 8%;
+          margin-right: 8%;
         }      
       } 
       /* 设置了浏览器宽度不大于736px时*/ 
@@ -153,6 +153,11 @@
           background: url('../image/banner/c1111.png') no-repeat;
           height: 200px;
         }
+        .team-mem-nav {
+          width: 610px;
+          margin-left: 5%;
+          margin-right: 5%;
+        } 
       } 
       /* 设置了浏览器宽度不大于678px时 */       
       @media screen and (max-width: 678px) { 
@@ -163,7 +168,7 @@
        }
       }
       /* 设置了浏览器宽度不大于578px时*/       
-      @media screen and (max-width: 578px) { 
+      @media screen and (max-width: 568px) { 
        .team-mem-nav {
          width: 65%;
          margin-left: 20%;
@@ -197,12 +202,12 @@
           height: 130px;
         }
         .team-mem-nav {
-          width: 88%;
-          margin-left: 6%;
-          margin-right: 6%;
+          width: 328px;
+          margin-left: 13%;
+          margin-right: 13%;
           margin: center;
         }
-        } 
+      } 
         /* 设置了浏览器宽度不大于320时*/ 
         @media screen and (max-width: 320px) { 
           #logo { 
@@ -230,11 +235,13 @@
             height: 120px;
           }
           .team-mem-nav {
-          width: 99%;
+          width: 76.8%;
+          margin-left: 15%;
+          margin-right: 15%;
           margin: center;
-        }
-        } 
-      } 
+         }
+       } 
+     } 
     </style>
     
 </head>
