--- a/team.html
+++ b/team.html
@@ -40,9 +40,9 @@
             margin-top: 3.5%;
         }
         .team-mem-nav {
-          width: 620px;
-          margin-left: 25%;
-          margin-right: 25%;
+          width: 500px;
+          margin-left: 36%;
+          margin-right: 36%;
         }
       } 
       /* 设置了浏览器宽度不大于1366px时*/ 
@@ -69,9 +69,9 @@
             margin-top: 3.5%;
         }
         .team-mem-nav {
-          width: 610px;
-          margin-left: 25%;
-          margin-right: 25%;
+          width: 500px;
+          margin-left: 30%;
+          margin-right: 30%;
         }
       } 
       /* 设置了浏览器宽度不大于960px时 iPad Pro & Laptop 1024*/  
@@ -98,9 +98,9 @@
           height: 400px;
         }
         .team-mem-nav {
-          width: 620px;
-          margin-left: 6%;
-          margin-right: 6%;
+          width: 500px;
+          margin-left: 25%;
+          margin-right: 25%;
         }
       } 
       /* 设置了浏览器宽度不大于768px时 iPad 768*/ 
@@ -127,9 +127,9 @@
           height: 230px;
         }
         .team-mem-nav {
-          width: 620px;
-          margin-left: 1%;
-          margin-right: 1%;
+          width: 500px;
+          margin-left: 15%;
+          margin-right: 15%;
         }      
       } 
       /* 设置了浏览器宽度不大于736px时*/ 
@@ -153,6 +153,11 @@
           background: url('../image/banner/c1111.png') no-repeat;
           height: 200px;
         }
+        .team-mem-nav {
+          width: 500px;
+          margin-left: 14%;
+          margin-right: 14%;
+        }  
       } 
       /* 设置了浏览器宽度不大于678px时 */       
       @media screen and (max-width: 678px) { 
@@ -161,13 +166,18 @@
          margin-left: 1%;
          margin-right: 1%;
        }
+       .team-mem-nav {
+         width: 500px;
+         margin-left: 10%;
+         margin-right: 10%;
+       }  
       }
       /* 设置了浏览器宽度不大于578px时*/       
       @media screen and (max-width: 578px) { 
        .team-mem-nav {
-         width: 65%;
-         margin-left: 20%;
-         margin-right: 20%;
+         width: 480px;
+         margin-left: 2%;
+         margin-right: 2%;
        }
       }
       /* 设置了浏览器宽度不大于480时*/ 
@@ -195,14 +205,13 @@
         .home-contact {
           background: url('../image/banner/c11111.png') no-repeat;
           height: 130px;
-        }
+        }        
         .team-mem-nav {
-          width: 88%;
-          margin-left: 6%;
-          margin-right: 6%;
-          margin: center;
+         width: 250px;
+         margin-left: 25%;
+         margin-right: 25%;
         }
-        } 
+      } 
         /* 设置了浏览器宽度不大于320时*/ 
         @media screen and (max-width: 320px) { 
           #logo { 
@@ -230,9 +239,10 @@
             height: 120px;
           }
           .team-mem-nav {
-          width: 99%;
-          margin: center;
-        }
+           width: 250px;
+           margin-left: 10%;
+           margin-right: 10%;
+          }
         } 
       } 
     </style>
@@ -339,15 +349,15 @@
   <div class="page-header">
     <h1 class="text-center"><small>队伍成员</small></h1>
   </div>
-  <div class="row-p5">
+  <div class="row-p5c">
     <!-- Nav tabs -->
     <ul class="nav nav-tabs team-mem-nav" role="tablist">
-      <li role="presentation" class="active"><a href="#all" role="tab" data-toggle="tab">All</a></li>
-      <li role="presentation" class=""><a href="#programme" role="tab" data-toggle="tab">Programme</a></li>
-      <li role="presentation" class=""><a href="#mechanical" role="tab" data-toggle="tab">Mechanical</a></li>
-      <li role="presentation" class=""><a href="#operation" role="tab" data-toggle="tab">Operation</a></li>
-      <li role="presentation" class=""><a href="#designer" role="tab" data-toggle="tab">Designer</a></li>
-      <li role="presentation" class=""><a href="#sponsorship" role="tab" data-toggle="tab">Sponsorship</a></li>
+      <li role="presentation" class="active"><a href="#all" role="tab" data-toggle="tab">所有</a></li>
+      <li role="presentation" class=""><a href="#programme" role="tab" data-toggle="tab">编程组</a></li>
+      <li role="presentation" class=""><a href="#mechanical" role="tab" data-toggle="tab">机械组</a></li>
+      <li role="presentation" class=""><a href="#operation" role="tab" data-toggle="tab">运营组</a></li>
+      <li role="presentation" class=""><a href="#designer" role="tab" data-toggle="tab">设计组</a></li>
+      <li role="presentation" class=""><a href="#sponsorship" role="tab" data-toggle="tab">商务组</a></li>
     </ul>
 
     <!-- Tab panes -->
