FRC Chinese edtion updated

--- a/en/frc.html
+++ b/en/frc.html
@@ -307,6 +307,7 @@
             <li>A suitable space to design and build an industrial-sized robot (about 150 lbs.), that has access to a variety of machine shop power tools</li>
             <li>A standard kit of parts and a common set of rules issued by <em>FIRST </em></li>
             <li>A community sponsor(s) that will help fund your efforts and provide other support</li>
+            <li>The desire to learn, explore, strategize, build comradery, share ideas and talents, make new friends, be accepted, and HAVE FUN! </li>
           </ul>
        </p>  
      
