--- a/frc.html
+++ b/frc.html
@@ -256,7 +256,7 @@
 
   <!--page-header -->
   <div class="page-header">
-    <h1 class="text-center"><small>What's FIRST Robotics Competition?</small></h1>
+    <h1 class="text-center"><small>什么是FRC？</small></h1>
   </div>
 
   <div class="row-p5">
@@ -271,21 +271,21 @@
   </div>
 
   <div class="page-header">
-    <h1 class="text-center"><small>What's <strong>impact</strong> of FIRST Robotics Competition?</small></h1>
+    <h1 class="text-center"><small>FRC的影响力是什么？</small></h1>
   </div>
   <div class="row-p5">
     <div class="frc-content col-md-7 col-sm-6 col-xs-12">
-      <p><strong><em>FIRST </em></strong><strong>Robotics Competition teams get to:</strong>&nbsp;</p>
+      <p><strong>参加FRC的队员可以获得：</strong>&nbsp;</p>
          <ul>
-           <li>Learn from professional engineers</li>
-           <li>Master STEM skills</li>
-           <li>Learn and use sophisticated software, hardware, and power tools</li>
-           <li>Build and compete with a robot of their own design</li>
-           <li>Improve teamwork, interpersonal, and communication skills</li>
-           <li>Compete and cooperate in alliances and tournaments</li>
-           <li>Understand and practice Gracious Professionalism?</li>
-           <li>Earn a place at the <em>FIRST </em>Championship</li>
-           <li>Qualify for millions of dollars in college scholarships</li>
+           <li>向专业的工程师学习；</li>
+           <li>掌握STEM技能；</li>
+           <li>学习和使用实用的软硬件知识和工具；</li>
+           <li>设计，搭建并完成一个机器人；</li>
+           <li>提高团队协作能力，人与人之间的沟通技巧；</li>
+           <li>在比赛中学习竞争与合作；</li>
+           <li>理解并发扬高尚的职业精神；</li>
+           <li>在总决赛中赢得一席之地；</li>
+           <li>有资格获得数百万美元的大学奖学金；</li>
          </ul>
       </p>     
     </div>
@@ -295,18 +295,19 @@
   </div>
 
   <div class="page-header">
-    <h1 class="text-center"><small>What's <strong>team basics</strong> FIRST Robotics Competition?</small></h1>
+    <h1 class="text-center"><small>FRC团队的基础是什么？</small></h1>
   </div>
   <div class="row-p5">
     <div class="frc-content col-md-7 col-sm-6 col-xs-12">
-      <p><strong>What does every <em>FIRST </em>Robotics Competition team need?</strong>&nbsp;</p>
+      <p><strong>每一个FRC的队伍需要什么？</strong>&nbsp;</p>
           <ul>
-            <li>2 or more adult Mentors with both technical and non-technical expertise willing and motivated to “coach” the team through the build and competition season (and beyond)</li>
-            <li>10 or more high school-aged students willing to put in time after school (and maybe some weekends) and to do any job the team needs to succeed (lots of important jobs available for all skill levels and interests)</li>
-            <li>A suitable meeting place</li>
-            <li>A suitable space to design and build an industrial-sized robot (about 150 lbs.), that has access to a variety of machine shop power tools</li>
-            <li>A standard kit of parts and a common set of rules issued by <em>FIRST </em></li>
-            <li>A community sponsor(s) that will help fund your efforts and provide other support</li>
+            <li>2个或更多的成年人导师，作为队伍的导师，在技术和非技术上以专业知识指导学生；</li>
+            <li>10个或更多的中学生，可以在课下一起完成团队工作（大量的团队工作可以提供给会各种技能，有各种兴趣的学生）；</li>
+            <li>一个可以开会的地方；</li>
+            <li>一个合适的场所用来设计并搭建一个工业级别的机器人（重约150磅）；</li>
+            <li>一个标准的Kit器材包和FIRST发行的赛季规则；</li>
+            <li>有赞助商可以提供资金支持以及其他支持；</li>
+            <li>学习，探索，做策略，建立情谊，分享创意和知识的渴望，结交新的朋友，被接纳，并享受快乐！</li>            
           </ul>
        </p>  
      
@@ -318,14 +319,15 @@
 
   <!--page-header -->
   <div class="page-header">
-    <h1 class="text-center"><small>The Event Experience</small></h1>
+    <h1 class="text-center"><small>赛事体验</small></h1>
   </div>
 
   <div class="row-p5">
     <div class="frc-content col-md-7 col-sm-12 col-xs-12">
-       <p><strong>Hard work pays off!</strong> Each FIRST Robotics Competition season culminates with district and regional events where qualifying teams compete for awards and a spot at the FIRST Championship. Events at every level offer students an amazing experience as they celebrate their hard work, have fun, make new friendships, and are exposed to ideas and ideology that will enhance their lives for decades to come. Every participant is eligible to apply for college scholarships! </p> 
-       <p>FIRST Robotics Competition team members, adult Mentors, and Volunteers all agree – season-ending events (various Regional Event, District Events and FIRST Championship) are the most amazing, inspiring experiences they’ve ever had. Where else can you make new friends, share ideas, solve problems on the fly, compete like crazy, and get pumped up over technology all while having the time of your lives? At FIRST Robotics Competition events, students realize more than ever that FIRST is all about teamwork, sharing, helping others, and respect.</p>
-       <p><a href="http://frc-events.firstinspires.org/" target="_blank">View season and Championship results.</a></p> 
+       <p><strong>一切努力都是值得的！</strong> <br>
+       每年FRC竞赛随着区域和地区赛事的进行，队伍们为赢得总决赛的名额，互相争夺奖项，慢慢达到高潮。每个级别的赛事，当在庆祝艰苦的团队工作，享受快乐，结交新朋友的时候，都是一次难忘的经历。而在接触新知识和环境的过程中，都会使学生在后续的成长中受益良多。而且每个参与者都有资格申请大学的奖学金。</p> 
+       <p>FRC队伍的成员，导师和志愿者都认为 - 颁奖典礼（包括各种各样的区域赛事，地区赛事和总决赛），是曾经历过的最激动人心的时刻。在那里你可以结交新朋友，分享创意，灵活的解决问题，疯狂的比赛等。在参加FRC赛事中，学生们认识到FIRST是关于团队，分享，互帮互助和尊重。</p>
+       <p><a href="http://frc-events.firstinspires.org/" target="_blank">回顾2017赛季和总决赛</a></p> 
     </div>
     <div class="frc-video col-md-5 col-sm-12 col-xs-12">
       <iframe src='http://player.youku.com/embed/XMTYxMDE2NTM4OA==' frameborder=0 'allowfullscreen'></iframe>
@@ -334,9 +336,9 @@
 
   <div class="row-p0">
     <div class="home-contact hidden-xs">
-        <h1 class="home-contact-title">Get in touch, let's do FRC! </h1>
-        <p class="hidden-sm home-contact-par" ><em>We are a team full of passion. </em></p>
-        <p><a class="btn btn-lg btn home-contact-btn" href="contact.html" role="button">Contact Us &nbsp;<span class="glyphicon glyphicon-hand-right"></span></a></p>    
+        <h1 class="home-contact-title">联系我们，开展FRC！ </h1>
+        <p class="hidden-sm home-contact-par" ><em>我们是一个充满激情的团队。 </em></p>
+        <p><a class="btn btn-lg btn home-contact-btn" href="contact.html" role="button">联系我们 &nbsp;<span class="glyphicon glyphicon-hand-right"></span></a></p>    
     </div>
   </div>
 
