FRC Chinese edtion updated

--- a/frc.html
+++ b/frc.html
@@ -241,13 +241,13 @@
   </div>
 
   <div class="page-header">
-    <h1 class="text-center"><small>The adventure begins January 7, 2017. Prepare to take flight!</small></h1>
+    <h1 class="text-center"><small>新赛季开始于2017年1月8日，准备战斗吧！</small></h1>
   </div>
   <div class="row-p5">
     <div class="frc-content col-md-7 col-sm-12 col-xs-12">
-       <p>Grab your goggles and start a team today! Be part of the more than 3,400 teams in 2017 comprised of 85,000 students and their adult Mentors from around the world who will prepare to take flight in <em>FIRST<sup>®</sup></em> STEAMWORKS<sup>SM</sup>.</p>
-       <p><em>FIRST</em><sup>®</sup> Robotics Competition is the ultimate Sport for the Mind,<sup>TM</sup> where imagination and innovation come together! By combining the excitement of sport and beauty of art with the rigors of science and technology, teams of high school students (ages 14 - 18/grades 9 - 12) are challenged to design a team “brand,” hone teamwork skills, and build and program robots to perform tasks against a field of competitors.</p>
-       <p>Teams&nbsp;work together and build, program and test robots with the guidance of adult Mentors. Teams then compete with their robots as family and friends cheer from the stands at more than 140 events worldwide – all leading up to the 2017 <em>FIRST</em><sup>®</sup> Championships April 19 - 22 in Houston, TX and April 26 - 29 in St. Louis, MO.</p>
+       <p>拿起护目镜，加入队伍吧！成为2017赛季由85，000个学生组成的超过3400个队伍（全世界的导师会为新赛季做准备）的一一员吧。</p>
+       <p>FRC是思想领域的终极运动，结合想象力和创造力。通过结合体育运动的趣味性和科学技术的严谨，由高中生组成的队伍（14-18岁 9-12年级），接受设计团队徽标，磨练团队合作技能，搭建和编程机器人去完成特定任务以及对抗赛场的竞争者。</p>
+       <p>在成年导师的指导下，团队一起合作，搭建，编程和测试机器人。可以参加全世界超过140个赛事，有机会在2017年4月19-22日参加休斯顿总决赛和4月26-29日圣易路斯总决赛。</p>
     </div>
     <div class="frc-video col-md-5 col-sm-12 col-xs-12">
       <iframe src='http://player.youku.com/embed/XMTc3Nzk4NDE1Mg==' frameborder=0 'allowfullscreen'></iframe>
